# python-design-patterns

./: pyproject.toml
adapter/before/: experiment.py
behavioral patterns/Observer/: exemplo_01.py
structural patterns/adapter/before/: main.py
structural patterns/adapter/refactored/: config_acess.py  experiment.py  main.py
