[tool.poetry]
name = "python-design-patterns"
version = "0.1.0"
description = ""
authors = ["Matheus Batista <mbatista.sarti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
bs4 = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
